fix content wider than screen on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -197,7 +197,11 @@ header {
     }
 
     .main-content-mw {
-        max-width: 100vw;
+        max-width: 95vw;
+    }
+
+    .row.breadcrumb-container{ 
+        max-width: 90vw;
     }
 
     .main-content-wrapper {
